--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\DHARMPAL\AppData\Local\Temp\testng-eclipse--1855154853\testng-customsuite.xml</span>
+                    <span>C:\Users\DHARMPAL\AppData\Local\Temp\testng-eclipse--359607545\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.qa.test.GetAPITest" hash-for-method="getTest">getTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.qa.test.GetAPITest" hash-for-method="getTestWithHeader">getTestWithHeader</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.qa.test.GetAPITest" hash-for-method="getTestWithoutHeader">getTestWithoutHeader</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +130,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getTest">
-                  </a> <!-- getTest -->
-                  <span class="method-name">getTest</span>
+                  <a name="getTestWithHeader">
+                  </a> <!-- getTestWithHeader -->
+                  <span class="method-name">getTestWithHeader</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getTestWithoutHeader">
+                  </a> <!-- getTestWithoutHeader -->
+                  <span class="method-name">getTestWithoutHeader</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\DHARMPAL\AppData\Local\Temp\testng-eclipse--1855154853\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\DHARMPAL\AppData\Local\Temp\testng-eclipse--359607545\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,16 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getTest')
+data.setCell(0, 1, 'getTestWithoutHeader')
 data.setCell(0, 2, 'com.qa.test.GetAPITest')
-data.setCell(0, 3, 1326);
+data.setCell(0, 3, 2075);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'getTestWithHeader')
+data.setCell(1, 2, 'com.qa.test.GetAPITest')
+data.setCell(1, 3, 869);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,8 +241,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">getTest</span>
-                <span class="method-start">16 ms</span>
+                <span class="method-name">getTestWithoutHeader</span>
+                <span class="method-start">28 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getTestWithHeader</span>
+                <span class="method-start">2111 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
