--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8fad71">  <td>18/06/17 11:49:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getTest()[pri:0, instance:com.qa.test.GetAPITest@7921b0a2]">getTest</td> 
+<tr bgcolor="8fad71">  <td>18/06/18 01:33:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getTestWithHeader()[pri:2, instance:com.qa.test.GetAPITest@7921b0a2]">getTestWithHeader</td> 
   <td>main@2015601401</td>   <td></td> </tr>
-<tr bgcolor="8fad71">  <td>18/06/17 11:49:25</td>   <td>-16</td> <td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:com.qa.test.GetAPITest@7921b0a2]">&gt;&gt;setUp</td> 
+<tr bgcolor="8fad71">  <td>18/06/18 01:33:12</td>   <td>-2083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getTestWithoutHeader()[pri:1, instance:com.qa.test.GetAPITest@7921b0a2]">getTestWithoutHeader</td> 
+  <td>main@2015601401</td>   <td></td> </tr>
+<tr bgcolor="8fad71">  <td>18/06/18 01:33:12</td>   <td>-2103</td> <td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:com.qa.test.GetAPITest@7921b0a2]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2015601401</td>   <td></td> </tr>
 </table>
